--- a/assignment2/style.css
+++ b/assignment2/style.css
@@ -47,7 +47,7 @@ body{
    .head1{
     text-align: center;
     font-size: large;
-    border:5px black solid;
+    border:3px black solid;
     padding:0px;
     background-color: antiquewhite;
     font-family:Verdana, Geneva, Tahoma, sans-serif;
@@ -58,7 +58,7 @@ body{
     width:100%;
     height:150px;
     display: block;
-    background-image:linear-gradient(to bottom right ,pink,yellow);
+    background-image:linear-gradient(to bottom right ,rgb(183, 22, 49),yellow);
    }
    .button-container {
     display: flex;
@@ -76,7 +76,7 @@ li{
   flex-grow:1;
   padding:5px;
   z-index:2;
-  justify-content: space-evenly;
+  justify-content: space-between;
   margin-top:0px;
   
 }
@@ -102,8 +102,38 @@ button:hover{
   margin-top:60px;
 }
 
+  /* About Us */
+.sec1{
+  background-image: linear-gradient(to bottom right,rgba(250, 217, 85, 0.996),rgb(194, 47, 47))
+}
   
+ /* contact us */
+ .form-ele{
+  display:flex;
+justify-content: center;
+align-items:center;
+height:100vh;
+border:1px solid black;
+ }
+
+ form{
+  padding:20px;
+  border-radius: 5px;;
+ }
+
+ label,input,textarea{
+  display:block;
+  margin-bottom:7px;
+ }
   
- 
-  
+submit-btn{
+    text-align: center;
+    font-size: large;
+    border:3px black solid;
+    padding:0px;
+    background-color: antiquewhite;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    width:40px;
+    
+}
    
